http/tests/websocket/tests/hybi/stop-on-resume-in-error-handler.html crashes on Windows almost all the time https://bugs.webkit.org/show_bug.cgi?id=144057

Patch by Per Arne Vollan <pvollan@apple.com> on 2016-05-30
Reviewed by Brent Fulgham.

Protect SocketStreamHandle object before trying to access it on the main thread, and make sure
CFWriteStreamRef parameter is valid before calling CFWriteStreamCanAcceptBytes.

* platform/network/cf/SocketStreamHandleCFNet.cpp:
(WebCore::SocketStreamHandle::readStreamCallback):
(WebCore::SocketStreamHandle::writeStreamCallback):


Canonical link: https://commits.webkit.org/176300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201500 268f45cc-cd09-0410-ab3c-d52691b4dbfc